--- a/index/templates/layout.html
+++ b/index/templates/layout.html
@@ -43,9 +43,7 @@
 
 
     <!-- footer -->
-    {% block footer %}
-        
-    {% endblock %}
+    {% include "include/footer.html" %}
     <!-- end footer -->
 
     
