--- a/index/templates/include/all_courses.html
+++ b/index/templates/include/all_courses.html
@@ -17,7 +17,7 @@
                 <a href="">
                     <div class="element_corusel">
                         <div class="element_all_photo">
-                            <img src="{{ row.image }}" alt="" class="element_all_photo_photo">
+                            <img src="{{ row.image.url }}" alt="" class="element_all_photo_photo">
                         </div>
                         <div class="all_element_title d-flex justify-content-center">
                             <p>{{ row.name }}</p>
