--- a/index/templates/include/all_courses.html
+++ b/index/templates/include/all_courses.html
@@ -14,7 +14,7 @@
         <div class="row">
             {% for row in rows %}
                 <div class="col-md-4">
-                <a href="">
+                <a href="{{ row.get_absolute_url }}">
                     <div class="element_corusel">
                         <div class="element_all_photo">
                             <img src="{{ row.image.url }}" alt="" class="element_all_photo_photo">
