--- a/index/static/css/layout.css
+++ b/index/static/css/layout.css
@@ -204,10 +204,19 @@ a:hover{
 }
 .element_corusel{
     height: 500px;
+   
+    
+    
+    
+    display: flex !important;
+    justify-content: center;
+    align-items: center;
+}
+.element_of_corusel{
+    height: 500px;
     width: 350px;
     background-color: #E1E1E1;
-    margin-top: 20px;
-    
+    padding-bottom: 20px;
 }
 .carusel_bottom{
     height: 80px;
@@ -353,11 +362,6 @@ a:hover{
     color: #BAA9A0;
     font-size: 24px;
 }
-input::placeholder{
-    color: #BAA9A0;
-    font-size: 24px;
-
-}
 .button{
     height: 50px;
     width: 230px;
@@ -395,7 +399,7 @@ input::placeholder{
     font-family: Roboto;
     font-style: normal;
     font-weight: 500;
-    font-size: 48px;
+    font-size: 36px;
     line-height: 56px;
     letter-spacing: 0.08em;
 
@@ -622,3 +626,55 @@ input::placeholder{
     margin-left: 20px;
 }
 /* end course_detail */
+
+.search-form {
+    --searchButtonWidth: 75px;
+    
+    max-width: 320px;
+    margin: 0 auto;
+    overflow: hidden;
+    position: relative;
+    margin-bottom: 250px;
+  }
+  
+  .search-input {
+    border: 0;
+    margin: 0;
+    padding: 0.5rem calc(var(--searchButtonWidth) + 0.5rem) 0.5rem 0.5rem;
+    border-radius: 8px;
+    width: 100%;
+    background: #ddd;
+    -webkit-appearance: none;
+    font-size: 13px;
+  }
+  .search-input:focus {
+    outline: 0;
+    background: white;
+  }
+  .search-input:not(:placeholder-shown) ~ .search-button {
+    transform: translateX(calc(-1 * var(--searchButtonWidth)));
+  }
+  
+  .search-button {
+    border: 0;
+    padding: 0.5rem;
+    border-radius: 8px;
+    position: absolute; 
+    top: 0;
+    left: 100%;
+    width: var(--searchButtonWidth);
+    transition: 0.2s;
+    background: #455A64;
+    color: white;
+    font-size: 13px;
+    height: 100%;
+  }
+  .search-button:focus {
+    outline: 0;
+    background: #222;
+  }
+  .screen-reader-text {
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
+  }
